Trying to prevent horizontal scrolling on mobile
When flexbox loads, the screen scrolls left-to-right on mobile, even though there is no additional content.

--- a/src/App.css
+++ b/src/App.css
@@ -146,6 +146,9 @@ img.thumbnail {
 }
 
 @media only screen and (max-width: 425px) {
+  body {
+    overflow-x: hidden !important;
+  }
   .game {
     width: calc(100vw - 10px);
   }
